# WavUtils

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt  main.cpp
Source/Classes/: CMakeLists.txt  WavHeader.hpp
Source/Classes/WavReader/: WavReader.cpp  WavReader.hpp
Source/Classes/WavWriter/: WavWriter.cpp  WavWriter.hpp
Source/Misc/Plotter/: Plot.cpp
Source/Test/: CMakeLists.txt  TestFileParamSetDef.hpp
Source/Test/WavReaderTester/: WavReaderTester.cpp  WavReaderTester.hpp
Source/Test/WavWriterTester/: WavWriterTester.cpp  WavWriterTester.hpp
android_demo/: CMakeLists.txt  ReadMe.md  main.cpp
